@@ -1,10 +1,13 @@
 #!/usr/bin/make -f
+pkg=strings-elf-detection
 %:
 	dh $@
 binary:
 	dh --before dh_install binary
 	cp /bin/true .
 	touch foo bar::ELF
+	mkdir -p debian/$(pkg)/usr/lib/foo
+	cp /bin/true debian/$(pkg)/usr/lib/foo/true\ false
 	dh --remaining binary
 
 clean:
